# CiteGuard-RAG

./: .env.example  LICENSE  README.md  app.py
app/: streamlit_app.py
citeguard-rag/: .gitignore  README.md  pyproject.toml  requirements.txt
citeguard-rag/.github/workflows/: ci.yml
citeguard-rag/app/: streamlit_app.py
citeguard-rag/configs/: default.yaml
citeguard-rag/data/samples/: custom_rag_examples.jsonl  perturbation_examples.jsonl
citeguard-rag/notebooks/: 01_error_analysis.ipynb
citeguard-rag/scripts/: generate_perturbations.py  run_benchmark.py
citeguard-rag/src/citeguard/: __init__.py  cli.py  pipeline.py  schemas.py
citeguard-rag/src/citeguard/data_loaders/: alce.py  ragtruth.py
citeguard-rag/src/citeguard/evaluators/: hybrid_rules.py  llm_judge.py  nli.py  semantic.py
citeguard-rag/src/citeguard/metrics/: citation.py
citeguard-rag/src/citeguard/preprocess/: citation_parser.py  text_cleaner.py
citeguard-rag/src/citeguard/reporting/: html_report.py  tables.py
citeguard-rag/src/citeguard/retrieval/: __init__.py  evidence_mapper.py
citeguard-rag/tests/: conftest.py  test_citation_parser.py  test_claim_splitter.py  test_evidence_mapper.py  test_pipeline_smoke.py
configs/: ablation_nli_only.yaml  ablation_semantic_only.yaml
dashboard/: streamlit_app.py
data/samples/: perturbation_examples.jsonl
sample_outputs/evidence_cards/: evidence_cards.jsonl
sample_outputs/tables/: claim_eval.csv  (+2 more)
scripts/: download_sample_data.py  generate_perturbations.py  make_figures.py  make_tables.py
tests/: test_claim_splitter.py  test_metrics.py
(+22 files in other folders)
