[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citeguard-rag"
version = "0.1.0"
description = "Claim-level diagnosis toolkit for retrieval-augmented generation outputs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CiteGuard-RAG Contributors"}
]
keywords = ["rag", "hallucination", "citation", "evaluation", "nli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2.2",
    "transformers>=4.36",
    "torch>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "click>=8.1",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[project.scripts]
citeguard = "citeguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
